Verif ACP/AFC/ACM

--- a/MCA.Rmd
+++ b/MCA.Rmd
@@ -6,7 +6,7 @@ output:
     toc_float: yes
 ---
 
-The third and last method of the **Multivariate Analysis** submenu is the multiple correspondence analysis. This analysis can take both nominal and ordinal categorical variables. The data used here is the gmo data set provided with the MEDA module.
+The third and last method of the **Multivariate Analysis** submenu is the multiple correspondence analysis. This analysis can take both nominal and ordinal categorical variables as active variable. The data used here is the gmo data set provided with the MEDA module.
 ```{r MCA1, out.width="60%", fig.align="left", echo=FALSE}
 knitr::include_graphics("images/MCA1.png")
 ```
@@ -15,6 +15,7 @@ knitr::include_graphics("images/MCA1.png")
 ## **The interface**
 
 The overall structure of the MCA GUI is the same as the other two **Multivariate Analysis** methods in MEDA.
+<br><br />
 
 ### Variables selection
 ```{r MCA2, out.width="60%", fig.align="left", echo=FALSE}
@@ -29,7 +30,7 @@ The selection of the variables in the MCA is the same as the PCA which means tha
 knitr::include_graphics("images/MCA3.png")
 ```
 
-The __*Ventilation level*__ option let you fix the proportion under which a category will be ventilated. In other terms, it let you choose the proportion under which a category will be randomly assigned to another category. (This option prevent the strong impact that rare categories often have.)
+The __*Ventilation level*__ option let you fix the proportion under which a category will be ventilated. In other terms, it let you choose the threshold under which a category will be randomly assigned to another category. **This option prevent rare categories to impact strongly the analysis.**
 <br><br />
 
 ### Graphic options
@@ -37,11 +38,11 @@ The __*Ventilation level*__ option let you fix the proportion under which a cate
 knitr::include_graphics("images/MCA4.png")
 ```
 
-The __Graphic options__ allow you to choose which dimensions to plot as well as to whether to plot the either or both active and supplementary categories as well as to plot the correlation circle for the quantitative supplementary variables. Finally, the option __*Selection of categories*__ highlight a set number of categories based on a criterion. In the figure above, the option is set to "cos2 10" so that the 10 categories with the largest sum of square cosine on the plotted dimensions will be highlighted on the graph. However, the square cosine is not the only criterion you can use. The other criteria are:
+The __Graphic options__ allow you to choose which dimensions to plot. It also let you choose whether to plot either or both active and supplementary categories as well as to plot the correlation circle for the quantitative supplementary variables. Finally, the option __*Selection of categories*__ highlight a set number of categories based on a criterion. In the figure above, the option is set to "cos2 10" so that the 10 categories with the largest sum of square cosine on the plotted dimensions will be highlighted on the graph. However, the square cosine is not the only criterion you can use. The other criteria are:
 
 * "coord x": highlight the x categories with the largest sums of the square coordinates on the 2 dimensions
 
-* "contrib x": highlight the x categories with the biggest contributions
+* "contrib x": highlight the x categories with the biggest contributions on the 2 dimensions
 
 * "dist x": highlight the x categories with the highest distances to the center of gravity
 
@@ -59,13 +60,13 @@ Since this part of the interface is identical in the PCA and CA GUIs and given t
 
 ### Incorrect number of factors
 
-The number of factors option must be less than or equal to the number of active variables selected. Otherwise, the analysis will produce an error.
+The __*Number of factors*__ option must be less than or equal to the number of active variables selected. Otherwise, the analysis will produce an error.
 <br><br />
 
 ## **Output example**
 
-For this example, we use the gmo data set.. We put the 10 first variable in the *Active Variables (>1)* field and set the rest as categorical supplementary variable. Since the gmo data set doesn't have any quantitative variable, we simulated two and added them as supplementary quantitative variables.
-See below the figure for the settings:
+For this example, we use the gmo data set. We put the 10 first variables in the *Active Variables (>1)* field and set the rest as categorical supplementary variable. Since the gmo data set doesn't have any quantitative variable, we simulated two dummy variables and added them as supplementary quantitative variables.
+See the figure below for the settings:
 ```{r MCA16, out.width="40%", fig.align="left", echo=FALSE}
 knitr::include_graphics(c("images/MCA16.png","images/MCA17.png","images/MCA18.png"))
 ```
@@ -107,13 +108,13 @@ knitr::include_graphics("images/MCA11.png")
 ```
 <br><br />
 
-### Individual tables (coordinates)
+### Individual tables
 ```{r MCA12, out.width="40%", fig.align="left", echo=FALSE}
 knitr::include_graphics("images/MCA12.png")
 ```
 <br><br />
 
-### Variable tables (coordinates, contributions, cosines)
+### Variable tables
 ```{r MCA13, out.width="60%", fig.align="left", echo=FALSE}
 knitr::include_graphics(c("images/MCA13.png","images/MCA14.png","images/MCA15.png"))
 ```
