--- a/CA.Rmd
+++ b/CA.Rmd
@@ -7,7 +7,7 @@ output:
 ---
 
 The second analysis available in the **Multivariate Analysis** submenu is the correspondence analysis.\
-Since the CA is used on contingency table, the data used for this analysis in jamovi must contain a column with the row labels and the rest of the columns must only take as value positive integer (e.g. frequency in a contingency table). You can see an example in the figure below.
+Since a CA is used on a contingency table, the data used for this analysis in jamovi must contain a column with the row labels and the rest of the columns must only take positive integer as value (e.g. frequency in a contingency table). You can see an example in the figure below.
 ```{r CA1, out.width="60%", fig.align="left", echo=FALSE}
 knitr::include_graphics("images/CA1.png")
 ```
@@ -16,7 +16,7 @@ knitr::include_graphics("images/CA1.png")
 
 ## **The interface**
 
-The CA interface in it's a structure is very similar to the PCA interface. From top to bottom, there are the variable suppliers, the graphic options and the numerical indicators.
+The CA interface in it's structure is very similar to the PCA interface. From top to bottom, there are the variable suppliers, the graphic options and the numerical indicators.
 <br><br />
 
 ### Variables selection
@@ -56,12 +56,12 @@ You can also choose to show or not the supplementary columns on the graphs.
 knitr::include_graphics("images/CA6.png")
 ```
 <br><br />
-Since this part of the interface is identical in all three methods of the **Multivariate Analysis** submenu, you should go see the explanation on the [PCA page](PCA.html#numerical-indicators) where it has already been covered. The only difference in the case of a CA is that we talk about rows and columns (which have the same "role") instead of individual and variable.
+Since this part of the interface is identical in all three methods of the **Multivariate Analysis** submenu, you should go see the explanation on the [PCA page](PCA.html#numerical-indicators) where it has already been covered. The only difference in the case of a CA is that we talk about rows and columns (which have the same "role") instead of individuals and variables.
 <br><br />
 
 ## **Potential issue(s)**
 
-Unlike the PCA, where the *Number of factors* in the __*Automatic Description of the Axes*__ section must be less than or equal to the number of active variable, here it must be strictly lower to the number of active variable (columns in this context). If this condition is not met, an error will occur (see below).
+Unlike the PCA or the MCA, where the *Number of factors* in the __*Automatic Description of the Axes*__ section must be less than or equal to the number of active variables, here it must be strictly lower than the number of active variables (columns in this context). If this condition is not met, an error will occur.
 <br><br />
 
 ## **Output example**
@@ -92,7 +92,7 @@ knitr::include_graphics("images/CA12.png")
 <br><br />
 
 ### Chi-squared test
-```{r CA13, out.width="20%", fig.align="left", echo=FALSE}
+```{r CA13, out.width="25%", fig.align="left", echo=FALSE}
 knitr::include_graphics("images/CA13.png")
 ```
 <br><br />
@@ -111,12 +111,12 @@ knitr::include_graphics("images/CA15.png")
 
 ### Row tables
 ```{r CA16, out.width="30%", fig.align="left", echo=FALSE}
-knitr::include_graphics("images/CA16.png")
+knitr::include_graphics(c("images/CA16.png","images/CA17.png"))
 ```
 <br><br />
 
 ### Column tables
-```{r CA17, out.width="30%", fig.align="left", echo=FALSE}
-knitr::include_graphics("images/CA17.png")
+```{r CA18, out.width="30%", fig.align="left", echo=FALSE}
+knitr::include_graphics(c("images/CA18.png","images/CA19.png"))
 ```
 <br><br />
